--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
 <title>SUPER ROLETA MALUCA! BOA SORTE</title>
 
 <style>
+  /* Keyframes para Animações de Fundo */
+  @keyframes casino-lights {
+    0% {
+      background-position: 0% 0%, 50% 50%, 100% 100%;
+    }
+    100% {
+      background-position: 100% 100%, 0% 0%, 50% 50%;
+    }
+  }
+
   /* Variáveis de Cores Atualizadas */
   :root{
-    --bg:#f4f7f9;
+    --bg:#1e2329; /* Dark background color for consistency */
     --card:#ffffff;
     --accent:#ffc107;
     --success:#28a745;
@@ -20,7 +30,7 @@
     --audio-control-bg: #343a40; 
   }
 
-  /* Keyframes para Animações */
+  /* Keyframes para Animações de Elementos */
   @keyframes fadeInUp {
     from {
       opacity: 0;
@@ -42,9 +52,19 @@
   body{
     margin:0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background:var(--bg);
     color:#212529;
     -webkit-font-smoothing:antialiased;
+    
+    /* === FUNDO ANIMADO CASSINO === */
+    background-color: #0d1117; /* Base escura */
+    background-image: 
+        /* Efeitos de luzes sutis (dourado, vermelho, verde) */
+        radial-gradient(circle at 10% 50%, rgba(255, 215, 0, 0.15) 1%, transparent 10%), 
+        radial-gradient(circle at 90% 80%, rgba(255, 69, 0, 0.1) 1%, transparent 10%), 
+        radial-gradient(circle at 45% 10%, rgba(0, 255, 0, 0.12) 1%, transparent 10%); 
+    background-size: 400% 400%;
+    animation: casino-lights 30s linear infinite; /* Animação de movimento lento */
+    /* ============================ */
   }
 
   .container{
@@ -53,7 +73,8 @@
     background:var(--card);
     padding:35px;
     border-radius:15px;
-    box-shadow:0 10px 30px rgba(0,0,0,0.1);
+    /* Box Shadow para Fundo Escuro (Efeito Profissional) */
+    box-shadow: 0 10px 40px rgba(0,0,0,0.5), 0 0 20px rgba(255,255,255,0.05); 
     text-align:center;
     opacity: 0;
     animation: fadeInUp 0.8s ease-out forwards;
@@ -64,7 +85,6 @@
     margin:6px 0 8px; 
     color:#d60000; 
     font-weight:800;
-    /* Estilo para o novo título longo */
     line-height: 1.3;
     padding: 0 10px;
   }
@@ -251,15 +271,16 @@
   .no-discount-btn {
     margin-top: 50px;
     padding: 25px 14px;
-    margin-bottom: 25px; /* Ajuste para dar espaço ao novo botão do Telegram */
+    margin-bottom: 25px; 
   }
   
   /* NOVO ESTILO PARA O BOTÃO DO TELEGRAM (AZUL) */
   .telegram-btn {
     background: #0088cc; /* Cor padrão do Telegram */
     border-bottom: 5px solid #006699;
-    animation: fadeInUp 0.7s ease-out 1.1s forwards; /* Adicionado delay de animação */
+    animation: fadeInUp 0.7s ease-out 1.1s forwards; 
     margin-top: 25px; 
+    margin-bottom: 25px;
   }
   .telegram-btn:hover {
     background: #0077b3;
@@ -276,7 +297,7 @@
     font-size: 14px;
     color: #495057;
     opacity: 0;
-    animation: fadeInUp 0.7s ease-out 1.3s forwards; /* Adicionado delay de animação */
+    animation: fadeInUp 0.7s ease-out 1.3s forwards; 
   }
   .footer-links p {
     margin: 8px 0;
